--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
+  "homepage": "http://spanri.github.io/react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,7 +39,9 @@
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
+    "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.4",
+    "gh-pages": "^2.0.1",
     "typescript": "^3.5.3"
   }
 }
