for github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tim",
+  "name": "react-landing",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,6 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
-  "homepage": "http://spanri.github.io/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
