--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
+  "homepage": "./build",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && mv build/index.html .",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
